# resumeback

./: .buildinfo  .coveragerc  .gitignore  .travis.yml  LICENSE  Makefile  README.md  README.rst  _util.py  conftest.py  dev-requirements.txt  genindex.html  index.html  objects.inv  pyproject.toml  reference.html  search.html  searchindex.js  send_self.py  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  gh-pages.yml  publish.yml
_sources/: index.txt  reference.txt
docs/: Makefile  conf.py  index.rst  make.bat  reference.rst  requirements.txt
docs/source/: conf.py  index.rst  reference.rst
resumeback/: __init__.py
send_self/: __init__.py
tests/: __init__.py  test_deferring_methods.py  test_deferring_methods_py3.py  test_descriptors.py  test_garbage_collection.py  test_send_self.py  test_send_self_env.py  test_send_self_env_py3.py  test_subgenerators.py  test_subgenerators_py3.py  test_wrappers.py  wip.py
